# tauri-local-tool-collection

./: .gitignore  README.md  WINDOWS_AUDIT.md  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: windows-build.workflow.yml
scripts/: build-python-sidecar.ps1  build-windows.ps1
src/: App.css  App.tsx  types.ts
src-python/: base64_encoder.py  json_formatter.py  requirements-build.txt  tool_runner.py  uuid_generator.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  ToolDetail.tsx  ToolGrid.tsx  ToolIcon.tsx
src/utils/: icons.ts
