[package]
name = "tool-collection"
version = "0.1.0"
description = "A comprehensive tool collection application built with Tauri"
authors = ["Tool Collection Team"]
edition = "2021"

[lib]
name = "tool_collection_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
