[package]
name = "tool-collection"
version = "0.2.0"
description = "An extensible Windows tool collection built with Tauri, Rust, React and Python"
authors = ["Tool Collection Contributors"]
edition = "2021"

[lib]
name = "tool_collection_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
